# Retail-Forecasting-Talk

./: .env.example  .gitignore  LICENSE  README.md  marp.config.mjs  package.json  pyproject.toml
decks/: retail-forecast.md
notebooks/: Retail_Cyclicality.ipynb  Retail_Forecast.ipynb
src/: data_loader.py
src/regression_dclass/: regression_dclass_v0.py  regression_dclass_v1.py  regression_dclass_v2.py
tests/: conftest.py  test_data_loader.py
